--- a/ggd-recipes/GRCh37/1000g.yaml
+++ b/ggd-recipes/GRCh37/1000g.yaml
@@ -8,7 +8,7 @@ recipe:
     recipe_type: bash
     recipe_cmds:
       - |
-        baseurl=https://s3.amazonaws.com/gemini-annotations
+        baseurl=http://s3.amazonaws.com/gemini-annotations
         url=$baseurl/ALL.wgs.phase3_shapeit2_mvncall_integrated_v5a.20130502.sites.tidy.vcf.gz
         mkdir -p variation
         wget -c -O variation/1000g.vcf.gz $url
