--- a/ggd-recipes/GRCh37/ancestral.yaml
+++ b/ggd-recipes/GRCh37/ancestral.yaml
@@ -7,7 +7,7 @@ recipe:
     recipe_type: bash
     recipe_cmds:
       - |
-        baseurl=https://s3.amazonaws.com/bcbio_nextgen/human_ancestor.fa.gz
+        baseurl=http://s3.amazonaws.com/bcbio_nextgen/human_ancestor.fa.gz
         mkdir -p variation
         cd variation
         wget --no-check-certificate -c $baseurl
