--- a/ggd-recipes/GRCh37/cosmic.yaml
+++ b/ggd-recipes/GRCh37/cosmic.yaml
@@ -7,7 +7,7 @@ recipe:
     recipe_type: bash
     recipe_cmds:
       - |
-        baseurl=https://s3.amazonaws.com/biodata/variants/cosmic-v68-GRCh37.vcf.gz
+        baseurl=http://s3.amazonaws.com/biodata/variants/cosmic-v68-GRCh37.vcf.gz
         mkdir -p variation
         cd variation
         wget --no-check-certificate -c -O cosmic.vcf.gz -N $baseurl
