--- a/ggd-recipes/GRCh37/exac.yaml
+++ b/ggd-recipes/GRCh37/exac.yaml
@@ -8,7 +8,7 @@ recipe:
     recipe_type: bash
     recipe_cmds:
       - |
-        baseurl=https://s3.amazonaws.com/gemini-annotations
+        baseurl=http://s3.amazonaws.com/gemini-annotations
         url=$baseurl/ExAC.r0.3.sites.vep.tidy.vcf.gz
         mkdir -p variation
         wget -c -O variation/exac.vcf.gz $url
