--- a/ggd-recipes/GRCh37/prioritize.yaml
+++ b/ggd-recipes/GRCh37/prioritize.yaml
@@ -14,7 +14,7 @@ recipe:
     recipe_type: bash
     recipe_cmds:
       - |
-        baseurl=https://s3.amazonaws.com/biodata/coverage/prioritize/prioritize-cancer-GRCh37-20160215.tar.gz
+        baseurl=http://s3.amazonaws.com/biodata/coverage/prioritize/prioritize-cancer-GRCh37-20160215.tar.gz
         outdir=coverage/prioritize
         mkdir -p $outdir
         cd $outdir
