--- a/ggd-recipes/GRCh37/dbsnp.yaml
+++ b/ggd-recipes/GRCh37/dbsnp.yaml
@@ -1,4 +1,4 @@
-# UCSFify name sed magic from: https://github.com/mmarchin/utilities/blob/master/ucscify.sh
+# UCSFify name sed magic from: http://github.com/mmarchin/utilities/blob/master/ucscify.sh
 ---
 attributes:
   name: dbsnp
