--- a/ggd-recipes/hg38/ccds.yaml
+++ b/ggd-recipes/hg38/ccds.yaml
@@ -1,4 +1,4 @@
-# Consensus CDS (CCDS https://www.ncbi.nlm.nih.gov/projects/CCDS/CcdsBrowse.cgi) regions with two adjustments:
+# Consensus CDS (CCDS http://www.ncbi.nlm.nih.gov/projects/CCDS/CcdsBrowse.cgi) regions with two adjustments:
 # 
 # - 2 bps added to internal introns to capture canonical splice acceptor/donor sites
 # - Multiple transcripts from a single gene are merged into a single all inclusive gene entry.
@@ -11,7 +11,7 @@ recipe:
     recipe_type: bash
     recipe_cmds:
       - |
-        baseurl=https://s3.amazonaws.com/biodata/coverage/ccds-hg38-r20.bed.gz
+        baseurl=http://s3.amazonaws.com/biodata/coverage/ccds-hg38-r20.bed.gz
         outdir=coverage/coding
         mkdir -p $outdir
         cd $outdir
