--- a/ggd-recipes/hg38/dbsnp.yaml
+++ b/ggd-recipes/hg38/dbsnp.yaml
@@ -1,6 +1,6 @@
 # dbSNP 151: http://www.ncbi.nlm.nih.gov/variation/docs/human_variation_vcf/
 #
-# UCSFify name sed magic from: https://github.com/mmarchin/utilities/blob/master/ucscify.sh
+# UCSFify name sed magic from: http://github.com/mmarchin/utilities/blob/master/ucscify.sh
 ---
 attributes:
   name: dbsnp
