--- a/ggd-recipes/hg38/hisat2.yaml
+++ b/ggd-recipes/hg38/hisat2.yaml
@@ -11,7 +11,7 @@ recipe:
     recipe_type: bash
     recipe_cmds:
       - |
-        url=https://s3.amazonaws.com/biodata/genomes/hg38-hisat2-12-07-2015.tar.xz
+        url=http://s3.amazonaws.com/biodata/genomes/hg38-hisat2-12-07-2015.tar.xz
         wget -qO- $url > hg38-hisat2-tar.xz
         tar Jxvf hg38-hisat2-tar.xz
         rm hg38-hisat2-tar.xz
