--- a/ggd-recipes/GRCh37/dream-syn3.yaml
+++ b/ggd-recipes/GRCh37/dream-syn3.yaml
@@ -1,9 +1,9 @@
 # Truth sets from the DREAM genomic challenge 3
-# https://www.synapse.org/#!Synapse:syn312572/wiki/62018
+# http://www.synapse.org/#!Synapse:syn312572/wiki/62018
 #
-# Originally retrieved from https://www.synapse.org/#!Synapse:syn2177211
+# Originally retrieved from http://www.synapse.org/#!Synapse:syn2177211
 # and prepared with this script:
-# https://github.com/chapmanb/bcbio-nextgen/blob/master/scripts/utils/format_dream_truthset.py
+# http://github.com/chapmanb/bcbio-nextgen/blob/master/scripts/utils/format_dream_truthset.py
 ---
 attributes:
   name: dream-syn3
