--- a/ggd-recipes/GRCh37/prioritize.yaml
+++ b/ggd-recipes/GRCh37/prioritize.yaml
@@ -3,7 +3,7 @@
 #  - civic -- known cancer genes from the CIViC database
 #  - az300 -- list of 300 cancer genes of interest from AstraZeneca Oncology
 #  - az300-with-fusion -- az300 list plus known interacting fusions
-#      from FusionCatcher https://github.com/ndaniel/fusioncatcher/blob/master/bin/generate_known.py#L102
+#      from FusionCatcher http://github.com/ndaniel/fusioncatcher/blob/master/bin/generate_known.py#L102
 #  - az-cancer-panel -- az300 genes plus additional useful panel genes
 ---
 attributes:
