--- a/ggd-recipes/hg38/dream-syn3-crossmap.yaml
+++ b/ggd-recipes/hg38/dream-syn3-crossmap.yaml
@@ -1,12 +1,12 @@
 # Truth sets from the DREAM genomic challenge 3
-# https://www.synapse.org/#!Synapse:syn312572/wiki/62018
+# http://www.synapse.org/#!Synapse:syn312572/wiki/62018
 #
-# Originally retrieved from https://www.synapse.org/#!Synapse:syn2177211
+# Originally retrieved from http://www.synapse.org/#!Synapse:syn2177211
 # and prepared with this script:
-# https://github.com/chapmanb/bcbio-nextgen/blob/master/scripts/utils/format_dream_truthset.py
+# http://github.com/chapmanb/bcbio-nextgen/blob/master/scripts/utils/format_dream_truthset.py
 #
 # Converted to hg38 coordinates with CrossMap:
-# https://github.com/hbc/giab_remap_38
+# http://github.com/hbc/giab_remap_38
 ---
 attributes:
   name: dream-syn3-crossmap
@@ -19,7 +19,7 @@ recipe:
         dir=validation/dream-syn3-crossmap
         orig=synthetic_challenge_set3_tumor_20pctmasked_truth-crossmap-hg38
         mkdir -p $dir
-        wget --no-check-certificate -c https://s3.amazonaws.com/bcbio_nextgen/dream/$orig.tar.gz
+        wget --no-check-certificate -c http://s3.amazonaws.com/bcbio_nextgen/dream/$orig.tar.gz
         tar -xzvpf ${orig}.tar.gz
         cp $orig/${orig}.vcf.gz $dir/truth_small_variants.vcf.gz
         cp $orig/${orig}.vcf.gz.tbi $dir/truth_small_variants.vcf.gz.tbi
