--- a/ggd-recipes/hg38/esp.yaml
+++ b/ggd-recipes/hg38/esp.yaml
@@ -9,7 +9,7 @@ recipe:
     recipe_type: bash
     recipe_cmds:
       - |
-        url=https://s3.amazonaws.com/biodata/hg38_bundle/ESP6500SI-V2-hg38.vcf.gz
+        url=http://s3.amazonaws.com/biodata/hg38_bundle/ESP6500SI-V2-hg38.vcf.gz
         mkdir -p variation
         wget -c -O variation/esp.vcf.gz $url
         wget -c -O variation/esp.vcf.gz.tbi $url.tbi
