--- a/ggd-recipes/hg38/giab-NA12878-crossmap.yaml
+++ b/ggd-recipes/hg38/giab-NA12878-crossmap.yaml
@@ -1,6 +1,6 @@
-# Truth sets from the Genome in a Bottle project (https://sites.stanford.edu/abms/giab)
+# Truth sets from the Genome in a Bottle project (http://sites.stanford.edu/abms/giab)
 # Converted to hg38 coordinates using scripts from:
-# https://github.com/hbc/giab_remap_38
+# http://github.com/hbc/giab_remap_38
 # These are created using CrossMap with UCSC chain files. 
 ---
 attributes:
@@ -14,10 +14,10 @@ recipe:
       - |
         dir=validation/giab-NA12878-crossmap
         mkdir -p $dir
-        wget --no-check-certificate -c -O $dir/truth_small_variants.vcf.gz https://biodata.s3.amazonaws.com/giab_hg38_remap/GiaB_v2_19-38_crossmap.vcf.gz
-        wget --no-check-certificate -c -O $dir/truth_small_variants.vcf.gz.tbi https://biodata.s3.amazonaws.com/giab_hg38_remap/GiaB_v2_19-38_crossmap.vcf.gz.tbi
-        wget --no-check-certificate -c -O - https://biodata.s3.amazonaws.com/giab_hg38_remap/GiaB_v2_19-38_crossmap-regions.bed | grep -v ^chrM > $dir/truth_regions.bed
-        wget --no-check-certificate -c -O - https://biodata.s3.amazonaws.com/giab_hg38_remap/giab-svclassify-deletions-2015-05-22-crossmap-hg38.bed.gz | gunzip -c > $dir/truth_DEL.bed
+        wget --no-check-certificate -c -O $dir/truth_small_variants.vcf.gz http://biodata.s3.amazonaws.com/giab_hg38_remap/GiaB_v2_19-38_crossmap.vcf.gz
+        wget --no-check-certificate -c -O $dir/truth_small_variants.vcf.gz.tbi http://biodata.s3.amazonaws.com/giab_hg38_remap/GiaB_v2_19-38_crossmap.vcf.gz.tbi
+        wget --no-check-certificate -c -O - http://biodata.s3.amazonaws.com/giab_hg38_remap/GiaB_v2_19-38_crossmap-regions.bed | grep -v ^chrM > $dir/truth_regions.bed
+        wget --no-check-certificate -c -O - http://biodata.s3.amazonaws.com/giab_hg38_remap/giab-svclassify-deletions-2015-05-22-crossmap-hg38.bed.gz | gunzip -c > $dir/truth_DEL.bed
     recipe_outfiles:
       - validation/giab-NA12878-crossmap/truth_small_variants.vcf.gz
       - validation/giab-NA12878-crossmap/truth_small_variants.vcf.gz.tbi
