--- a/ggd-recipes/hg38/mirbase.yaml
+++ b/ggd-recipes/hg38/mirbase.yaml
@@ -32,13 +32,13 @@ recipe:
         zcat miRNA.str.gz | awk '{if ($0~/hsa/)print $0}' > miRNA.str
         wget --random-wait --retry-connrefused -q -N -c -O mirbase.gff3 ftp://mirbase.org/pub/mirbase/21/genomes/hsa.gff3
         #tdrmapper
-        wget   --random-wait --retry-connrefused  --no-check-certificate -q -N -c -O trna_mature_pre.fa https://github.com/sararselitsky/tDRmapper/raw/master/hg19_mature_and_pre.fa
+        wget   --random-wait --retry-connrefused  --no-check-certificate -q -N -c -O trna_mature_pre.fa http://github.com/sararselitsky/tDRmapper/raw/master/hg19_mature_and_pre.fa
         # mintmap
-        wget  --random-wait --retry-connrefused --no-check-certificate -q -N -c https://github.com/TJU-CMC-Org/MINTmap/raw/master/LookupTable.tRFs.MINTmap_v1.txt
-        wget  --random-wait --retry-connrefused --no-check-certificate -q -N -c https://github.com/TJU-CMC-Org/MINTmap/raw/master/tRNAspace.Spliced.Sequences.MINTmap_v1.fa
-        wget  --random-wait --retry-connrefused  --no-check-certificate -q -N -c https://github.com/TJU-CMC-Org/MINTmap/raw/master/OtherAnnotations.MINTmap_v1.txt
+        wget  --random-wait --retry-connrefused --no-check-certificate -q -N -c http://github.com/TJU-CMC-Org/MINTmap/raw/master/LookupTable.tRFs.MINTmap_v1.txt
+        wget  --random-wait --retry-connrefused --no-check-certificate -q -N -c http://github.com/TJU-CMC-Org/MINTmap/raw/master/tRNAspace.Spliced.Sequences.MINTmap_v1.fa
+        wget  --random-wait --retry-connrefused  --no-check-certificate -q -N -c http://github.com/TJU-CMC-Org/MINTmap/raw/master/OtherAnnotations.MINTmap_v1.txt
         # mirdeep2
-        wget  --random-wait --retry-connrefused --no-check-certificate -q -N -c -O Rfam_for_miRDeep.fa.gz https://github.com/lpantano/mirdeep2_core/raw/data/Rfam_for_miRDeep.fa.gz && gunzip Rfam_for_miRDeep.fa.gz
+        wget  --random-wait --retry-connrefused --no-check-certificate -q -N -c -O Rfam_for_miRDeep.fa.gz http://github.com/lpantano/mirdeep2_core/raw/data/Rfam_for_miRDeep.fa.gz && gunzip Rfam_for_miRDeep.fa.gz
         # targetscan analysis
     recipe_outfiles:
         - srnaseq/srna-transcripts.gtf
