--- a/ggd-recipes/hg38/vcfanno.yaml
+++ b/ggd-recipes/hg38/vcfanno.yaml
@@ -12,7 +12,7 @@ recipe:
         githash=ae0bde8ef254ce4320d9a35b19f7c3b1cef6665a
         mkdir -p config/vcfanno
         cd config/vcfanno
-        bcbio_baseurl=https://github.com/chapmanb/bcbio-nextgen/raw/$githash/config/vcfanno/
+        bcbio_baseurl=http://github.com/chapmanb/bcbio-nextgen/raw/$githash/config/vcfanno/
         wget --no-check-certificate -O gemini.conf -c $bcbio_baseurl/hg38-gemini.conf
         wget --no-check-certificate -O gemini.lua -c $bcbio_baseurl/hg38-gemini.lua
         wget --no-check-certificate -O dbnsfp.conf -c $bcbio_baseurl/hg38-dbnsfp.conf
